--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,72 +1,93 @@
-<footer class="footer">
+<footer class="site-footer" data-section-id="{{ section.id }}">
   <div class="container">
-    <div class="footer__grid">
-      <div class="footer__block">
-        <h3>{{ 'footer.about' | t }}</h3>
-        <p>{{ settings.footer_about }}</p>
+    <div class="footer__content">
+      <!-- Newsletter -->
+      <div class="footer__newsletter">
+        <h3>{{ 'general.newsletter.label' | t }}</h3>
+        <form action="/contact" method="post" class="newsletter-form">
+          <input type="hidden" name="form_type" value="customer">
+          <input type="hidden" name="utf8" value="✓">
+          <input type="email" 
+                 name="contact[email]" 
+                 placeholder="{{ 'general.newsletter.label' | t }}"
+                 class="newsletter-form__input"
+                 required>
+          <button type="submit" class="newsletter-form__submit">
+            {{ 'general.newsletter.button_label' | t }}
+          </button>
+        </form>
       </div>
-      
-      <div class="footer__block">
-        <h3>{{ 'footer.quick_links' | t }}</h3>
-        <ul>
-          {% for link in linklists.footer.links %}
-            <li><a href="{{ link.url }}">{{ link.title }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-      
-      <div class="footer__block">
-        <h3>{{ 'footer.contact' | t }}</h3>
-        <ul>
-          <li>{{ settings.footer_address }}</li>
-          <li>{{ settings.footer_phone }}</li>
-          <li>{{ settings.footer_email }}</li>
-        </ul>
-      </div>
-      
-      <div class="footer__block">
-        <h3>{{ 'footer.newsletter' | t }}</h3>
-        <p>{{ settings.footer_newsletter_text }}</p>
-        {% form 'customer' %}
-          <input type="hidden" name="contact[tags]" value="newsletter">
-          <div class="footer__newsletter-form">
-            <input type="email" name="contact[email]" placeholder="{{ 'footer.email_placeholder' | t }}" required>
-            <button type="submit" class="button">{{ 'footer.subscribe' | t }}</button>
-          </div>
-        {% endform %}
+
+      <!-- Links -->
+      {%- for block in section.blocks -%}
+        {%- case block.type -%}
+          {%- when 'link_list' -%}
+            <div class="footer__section">
+              <h3>{{ block.settings.heading }}</h3>
+              <ul class="footer__links">
+                {%- for link in linklists[block.settings.menu].links -%}
+                  <li>
+                    <a href="{{ link.url }}" class="footer__link">
+                      {{ link.title }}
+                    </a>
+                  </li>
+                {%- endfor -%}
+              </ul>
+            </div>
+        {%- endcase -%}
+      {%- endfor -%}
+
+      <!-- Social -->
+      <div class="footer__section">
+        <h3>Follow Us</h3>
+        <div class="footer__social">
+          {%- if settings.social_facebook_link != blank -%}
+            <a href="{{ settings.social_facebook_link }}" target="_blank" rel="noopener">
+              {% render 'icon', icon: 'facebook' %}
+            </a>
+          {%- endif -%}
+          {%- if settings.social_instagram_link != blank -%}
+            <a href="{{ settings.social_instagram_link }}" target="_blank" rel="noopener">
+              {% render 'icon', icon: 'instagram' %}
+            </a>
+          {%- endif -%}
+          {%- if settings.social_twitter_link != blank -%}
+            <a href="{{ settings.social_twitter_link }}" target="_blank" rel="noopener">
+              {% render 'icon', icon: 'twitter' %}
+            </a>
+          {%- endif -%}
+        </div>
       </div>
     </div>
-    
+
     <div class="footer__bottom">
-      <div class="footer__copyright">
-        &copy; {{ 'now' | date: "%Y" }}, {{ shop.name }}. {{ 'footer.all_rights_reserved' | t }}
-      </div>
-      
-      <div class="footer__social">
-        {% if settings.social_facebook_link != blank %}
-          <a href="{{ settings.social_facebook_link }}" class="footer__social-icon" aria-label="Facebook">
-            {% render 'icon', name: 'facebook' %}
-          </a>
-        {% endif %}
-        
-        {% if settings.social_instagram_link != blank %}
-          <a href="{{ settings.social_instagram_link }}" class="footer__social-icon" aria-label="Instagram">
-            {% render 'icon', name: 'instagram' %}
-          </a>
-        {% endif %}
-        
-        {% if settings.social_twitter_link != blank %}
-          <a href="{{ settings.social_twitter_link }}" class="footer__social-icon" aria-label="Twitter">
-            {% render 'icon', name: 'twitter' %}
-          </a>
-        {% endif %}
-        
-        {% if settings.social_youtube_link != blank %}
-          <a href="{{ settings.social_youtube_link }}" class="footer__social-icon" aria-label="YouTube">
-            {% render 'icon', name: 'youtube' %}
-          </a>
-        {% endif %}
-      </div>
+      <p>{{ 'sections.footer.copyright' | t: date: 'now' | date: '%Y', shop_name: shop.name }}</p>
     </div>
   </div>
 </footer>
+
+{% schema %}
+{
+  "name": "Footer",
+  "blocks": [
+    {
+      "type": "link_list",
+      "name": "Menu",
+      "settings": [
+        {
+          "type": "text",
+          "id": "heading",
+          "default": "Quick links",
+          "label": "Heading"
+        },
+        {
+          "type": "link_list",
+          "id": "menu",
+          "default": "footer",
+          "label": "Menu"
+        }
+      ]
+    }
+  ]
+}
+{% endschema %}
